--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
         "bergben-angular2-file-drop": "^0.2.0"
     },
     "peerDependencies": {
-        "@angular/core": "^2.0.0",
-        "@angular/platform-browser": "^2.0.0",
-        "@angular/common": "^2.0.0"
+        "@angular/core": "^2.0.0||^4.0.0",
+        "@angular/platform-browser": "^2.0.0||^4.0.0",
+        "@angular/common": "^2.0.0||^4.0.0"
     },
     "devDependencies": {
         "@angular/common": "^2.4.8",
